--- a/composer.json
+++ b/composer.json
@@ -7,20 +7,21 @@
     "require": {
         "php": ">=7.1.3",
         "algolia/algoliasearch-client-php": "^1.25",
+        "barryvdh/laravel-cors": "^0.11.0",
         "doctrine/dbal": "^2.6",
         "fideloper/proxy": "~4.0",
+        "filp/whoops": "~2.0",
+        "fzaninotto/faker": "~1.4",
         "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "5.6.*",
         "laravel/scout": "^4.0",
         "laravel/tinker": "~1.0",
         "laravelcollective/html": "^5.4.0",
-        "unisharp/laravel-ckeditor": "^4.7",
-        "filp/whoops": "~2.0",
-        "fzaninotto/faker": "~1.4",
         "mockery/mockery": "~1.0",
         "nunomaduro/collision": "~2.0",
         "phpunit/phpunit": "~7.0",
-        "symfony/thanks": "^1.0"        
+        "symfony/thanks": "^1.0",
+        "unisharp/laravel-ckeditor": "^4.7"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
