--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "laravel/scout": "^4.0",
         "laravel/tinker": "~1.0",
         "laravelcollective/html": "^5.4.0",
+        "maatwebsite/excel": "^2.1",
         "mockery/mockery": "~1.0",
         "nunomaduro/collision": "~2.0",
         "phpunit/phpunit": "~7.0",
